@@ -11,8 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-		android:hasCode="false">
+        android:label="@string/app_name">
 		<meta-data
 			android:name="net.zhuoweizhang.mcpelauncher.api.nativelibname"
         	android:value="knifemod"/>
