@@ -2,7 +2,7 @@
 
 enum class CreativeItemCategory : int {
 	BLOCKS = 1,
-	DECORATIONS = 2,
-	TOOLS = 3,
-	ITEMS = 4
+	DECORATIONS,
+	TOOLS,
+	ITEMS
 };
